pippijn     2007/06/03 21:33:22 UTC	(20070603-8401)
  Log:
  Made www_root for the httpd configurable.
  

  Changes:	Modified:
  +5 -0		trunk/dist/example.conf (File Modified) 
  +14 -2	trunk/modules/misc/httpd.c (File Modified) 


pippijn     2007/06/03 21:26:08 UTC	(20070603-8399)
  Log:
  Make the xmlrpc handler path configurable.
  

  Changes:	Modified:
  +250 -227	trunk/dist/example.conf (File Modified) 
  +44 -9	trunk/modules/xmlrpc/main.c (File Modified) 


jilles      2007/06/03 20:45:09 UTC	(20070603-8397)
  Log:
  As before, make depend in src not use version.c as it normally doesn't exist.
  

  Changes:	Modified:
  +1 -1		trunk/src/Makefile.in (File Modified) 


jilles      2007/06/03 20:43:56 UTC	(20070603-8395)
  Log:
  Add Id keywords.
  

  Changes:	Modified:
  + -		trunk/modules/Makefile.common.in  (Property Modified)
  + -		trunk/modules/Makefile.defs.in  (Property Modified)


pippijn     2007/06/03 20:39:46 UTC	(20070603-8393)
  Log:
  Fixed make depend in contrib
  

  Changes:	Modified:
  +1 -1		trunk/contrib/Makefile.in (File Modified) 


jilles      2007/06/03 20:38:50 UTC	(20070603-8391)
  Log:
  Add more missing includes.
  

  Changes:	Modified:
  +1 -0		trunk/modules/xmlrpc/channel.c (File Modified) 
  +1 -0		trunk/modules/xmlrpc/memo.c (File Modified) 
  +1 -0		trunk/src/datastream.c (File Modified) 


pippijn     2007/06/03 20:36:51 UTC	(20070603-8389)
  Log:
  Added missing includes
  

  Changes:	Modified:
  +2 -0		trunk/modules/xmlrpc/account.c (File Modified) 
  +1 -0		trunk/modules/xmlrpc/channel.c (File Modified) 
  +1 -0		trunk/modules/xmlrpc/memo.c (File Modified) 


pippijn     2007/06/03 20:33:38 UTC	(20070603-8387)
  Log:
  Added missing file
  

  Changes:	Modified:
  +38 -0	trunk/include/httpd.h (File Added) 


jilles      2007/06/03 20:33:21 UTC	(20070603-8385)
  Log:
  Fix make depend.
  

  Changes:	Modified:
  +1 -0		trunk/modules/Makefile.in (File Modified) 
  +1 -1		trunk/modules/xmlrpc/Makefile.in (File Modified) 
