@@ -5,7 +5,7 @@
  *
  * Items marked with "(*)" are reconfigurable at runtime via REHASH.
  *
- * $Id: example.conf 8401 2007-06-03 21:33:22Z pippijn $
+ * $Id: example.conf 8405 2007-06-03 21:40:48Z pippijn $
  */
 
 /* Protocol module.
@@ -353,8 +353,7 @@ loadmodule "modules/misc/httpd"
 /* XMLRPC server module.
  * 
  * The XML-RPC handler requires modules/misc/httpd to be loaded as it merely
- * registers a path handler for XML-RPC. The path under which xmlrpc is
- * handled can be set in the xmlrpc { } block below.
+ * registers a path handler for XML-RPC. The path used for XML-RPC is /xmlrpc.
  *
  * XMLRPC handler for the httpd			modules/xmlrpc/main
  * Legacy account management			modules/xmlrpc/account
@@ -768,18 +767,6 @@ httpd {
 	 */
 	port = 8080;
 };
-
-/* The XML-RPC handler for the HTTP server. */
-xmlrpc {
-	/* path
-	 * The path under the server root that is used for xmlrpc. If this is
-	 * /xmlrpc, the port of the HTTP server above is 8080 and the host is
-	 * 127.0.0.1, then you can point your XML-RPC clients at
-	 * http://127.0.0.1:8080/xmlrpc
-	 */
-	path = "/xmlrpc";
-};
-
 
 /* MemoServ */
 memoserv {
